# afa-gcp-dpf-infrastructure-factory

./: .gitignore  .pre-commit-config.yaml  README.md  setup.sh
dataplatform/: Makefile  README.md  main.tf  terraform.tf  variables.tf
dataplatform/.terraform-dev/modules/: modules.json
dataplatform/envs/: dev.backend  dev.tfvars  prd.backend  prd.tfvars  uat.backend  uat.tfvars
factory/: .terraform.lock.hcl  00_locals.tf  Makefile  README.md  backend.backend  main.function.tf  main.tf  main.workload.identity.tf  output.tf  terraform.tf  variables.tf
modules/workloadidentity/: main.tf  outputs.tf  variables.tf
modules/workloadidentityGithub/: variables.tf
modules/workloadidentityGitlab/: main.tf  variables.tf
modules/workloadidentitygithub/: main.tf
modules/workloadidentitygitlab/: README.md  main.tf  terraform.tf  variables.tf
seeds/: README.md  main.tf  output.tf
seeds/envs/: dev.backend  dev.tfvars  prd.backend  prd.tfvars  uat.backend  uat.tfvars
src/python/function-generate-data/: main.py  pyproject.toml  requirements.txt  utils.py
